--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ header{
 .headear2{
     height: 200px;
     background-color: #3F4996;
-    background-image: url("RKXZvX.png");
+    background-image: url("img/RKXZvX.png");
     background-size: 320px 199px;
 }
 .mainCard{
